# Back/index.js
@@ -4,6 +4,8 @@ const alertsRouter = require("./api/alerts/alertsroutes");
 const mediaRouter = require("./api/medias/mediasroutes");
 const categoriesRouter = require("./api/categories/categoriesroutes");
 const participationsRouter = require("./api/participations/participationsroutes");
+const apiKeyRouter = require("./api/api_key/api_keyroutes");
+const apiKeyAuth = require("./middleware/apikey");
 const app = express();
 const port = 3000;
 
@@ -17,10 +19,11 @@ app.use(express.json());
 setupSwagger(app);
 
 // Initialisation des routes
-app.use("/api/alerts", alertsRouter);
-app.use("/api/medias", mediaRouter);
-app.use("/api/categories", categoriesRouter);
-app.use("/api/participations", participationsRouter);
+app.use("/api/alerts", apiKeyAuth, alertsRouter);
+app.use("/api/medias", apiKeyAuth, mediaRouter);
+app.use("/api/categories", apiKeyAuth, categoriesRouter);
+app.use("/api/participations", apiKeyAuth, participationsRouter);
+app.use("/api/api_keys", apiKeyRouter);
 
 // Démarrage du serveur
 app.listen(port, () => {
